# gnucash-uk-vat

./: .gitignore  Makefile  README.assist.md  README.md  README_GENERATOR.md  TEST_ACCOUNTS.md  TEST_GENERATOR.md  TEST_STRATEGY.md  accounts.py  config.py  dummy-vat-service  gnucash-uk-vat  gnucash_test_generator.py  hmrc.py  model.py  mypy.ini  operations.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  setup.sh  simple_test_generator.py  test-fraud-api  test_data_generator.py  ui  vat-data.json
.github/workflows/: ci.yaml  pull-request.yaml
accounts/: accounts.gnucash
docs/: accounts.md  assist.md  cli.md  installation.md  local-test.md
gnucash_uk_vat/: __init__.py  __main__.py  accounts.py  accounts_gnucash.py  accounts_piecash.py  assist.py  auth.py  cli.py  config.py  device.py  hmrc.py  model.py  operations.py  test_service.py  vat.py  version.py
hmrc-tools/: README.md  get-fraud-feedback  get-test-user
scripts/: gnucash-uk-vat  vat-test-service
test/: README.md  config.example.json  get-test-user  gnucash-uk-vat-test-2017-05.json  gnucash-uk-vat-test-2017-08.json  gnucash-uk-vat.sh  hmrc-test.sqlite3.gnucash  test-fraud-api  test_fraud_api.py  unit-test.sh
test-generator/: README_DUMPER.md  example_config.json  gnucash_dumper.py  vat_transactions.json
tests/: test_models.py  test_module.py  test_vat.py
tests/contract/: test_config_contract.py  test_extension_points.py  test_hmrc_api_contract.py  test_oauth_contract.py
tests/fixtures/: piecash_utils.py  test-auth.json  test-config.json  test-gnucash.db  test-vat-data.json
tests/integration/: __init__.py  conftest.py  test_cli_operations.py  test_end_to_end_workflows.py  test_oauth_flow.py  test_piecash_vat_calculations.py  test_vat_operations.py
tests/unit/: test_accounts.py  test_accounts_piecash.py  test_auth.py  test_cli.py  test_config.py  test_device.py  test_hmrc.py  test_main.py  test_model.py  test_operations.py  test_vat.py
